--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>slider</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,7 +33,7 @@
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
       <div class="row gallery">
-
+       
       </div>
     </section>
     <!-- slider -->
